api doc: don't link to github for the file if the file isn't on github
Change-Id: I398749b4f512e2a50c4eb0cd7e021371bb944d3b
Reviewed-on: https://gerrit.instructure.com/11336
Reviewed-by: Jacob Fugal <jacob@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/doc/api/method_details/html/header.erb
+++ b/doc/api/method_details/html/header.erb
@@ -3,8 +3,9 @@
     <a name='<%= @method_link %>' href='#<%= @method_link %>'>
       <%= object.tag("API").try(:text) %>
     </a>
-    <% route = @routes.first %>
-    <span class='defined-in'><a href="https://github.com/instructure/canvas-lms/blob/master/app/controllers/<%= route.requirements[:controller] %>_controller.rb"><%= "#{route.requirements[:controller].camelize}Controller\##{route.requirements[:action]}" %></a></span>
+    <% if @controller_path %>
+      <span class='defined-in'><a href="https://github.com/instructure/canvas-lms/blob/master/<%= @controller_path %>"><%= "#{@route.requirements[:controller].camelize}Controller\##{@route.requirements[:action]}" %></a></span>
+    <% end %>
   </h2>
   <%= yieldall %>
 </div>
