dashboard phasing, closes #8802
adds button (and underlying pref/endpoint) so users can opt in to (or out
of) the new dashboard. button appears on old and new dashboard and group
pages.

test plan:
1. opt in to the new dashboard
2. you should see the new dashboard (and new group page)
3. opt out
4. you should see the old dashboard (and old group page)

Change-Id: I151f3a3979ddc3e18e7e0dbf97d271ace91b3235

--- a/app/stylesheets/blue/_base.scss
+++ b/app/stylesheets/blue/_base.scss
@@ -98,3 +98,24 @@ h1 {
     left: 4px;
   }
 }
+
+.dashboard-toggle a {
+  padding: 0 10px;
+  border-radius: 3px;
+  @include gradient-vertical(#0abdff, #008fd6);
+  text-decoration: none !important;
+  &:hover {
+    border-color: #165A92;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.5);
+    color: white;
+  }
+  font-size: 12px;
+  font-family: GillSans,Calibri,Trebuchet,sans-serif;
+  border: 1px solid #1e7eca;
+  color: white;
+  text-shadow: rgba(0,0,0,0.5) 1px 0 1px;
+  -moz-user-select: none;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 0 10px 0;
+}
