--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :page_title do %><%= join_title @group.name, @context.full_name %><% end %>
+<% js_bundle :group %>
 <%  @active_tab = "home" %>
 <% content_for :auto_discovery do %>
   <% if @context_membership %>
