--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -13,7 +13,7 @@
     <div class="span5">
       <h1><%= @user.short_name %></h1>
       <p><%= format_message(@user.bio || "").first.html_safe %></p>
-      <% if @user.grants_right? @current_user, :follow %>
+      <% if @can_follow %>
         <p><button id="follow_user">Follow</button></p>
       <% end %>
     </div>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <th>Followers</th>
-          <td>103</td>
+          <td><%= @followers_count %></td>
         </tr><tr>
           <th>Collections</th>
           <td><%= @user.collections.public.count %></td>
