QuickStartBar: un-tie discussions from courses
Change-Id: I03ad2eaa0154a6eeb0a7129c8281ffb51766b201

--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -28,7 +28,7 @@
     <div class="row-fluid expandee">
       <div class="span10">
         <input
-          name="course_ids"
+          name="context_ids"
           class="contextSearch span10"
           type="text"
           data-finder_url="/conversations/find_recipients">
