--- a/app/stylesheets/g_wiki_sidebar.sass
+++ b/app/stylesheets/g_wiki_sidebar.sass
@@ -1,4 +1,5 @@
 @import environment.sass
+@import blue/_icons.scss
 
 #editor_tabs
   :font-size 0.8em
@@ -105,6 +106,41 @@
       font-weight: bold
       padding-left: 20px
       background: transparent url(/images/page_white_get.png) no-repeat left center
+#wiki_sidebar_collections
+  padding: 10px 0 0
+  ul
+    padding: 0
+    margin: 1em 0 3px
+    list-style: none
+    border: 1px solid #ccc
+    max-height: 279px
+    border: 1px solid #cccccc
+    overflow: auto
+    li
+      cursor: pointer
+      padding: 0 8px 0 39px
+      position: relative
+      margin: 0
+      height: 33px
+      border-top: 1px solid #fff
+      border-bottom: 1px solid #dfe0e0
+      color: #4790ec
+      &.even
+        background-color: #f2f9fe
+      &.last
+        border-bottom: none
+      img
+        position: absolute
+        top: 3px
+        left: 3px
+        width: 24px
+        height: 24px
+      i
+        position: absolute
+        top: 7px
+        left: 7px
+        width: 16px
+        height: 16px
 
 .ui-effects-transfer
   :border 2px dashed #000
