pass views into quickstartbar
Change-Id: Ia597de0cbc88fe64b8a502a909217e1ab09d13a6

--- a/app/stylesheets/blue/_icons.scss
+++ b/app/stylesheets/blue/_icons.scss
@@ -343,7 +343,7 @@ i[class*=icon-large-], i[class^=icon-large-] {
   .icon-pin {
     background-position: -102px -10px;
   }
-  .icon-calendar-day {
+  .icon-calendar-day, .icon-event {
     background-position: -132px -10px;
   }
 }
