--- a/app/views/jst/quickStartBar/QuickStartBarView.handlebars
+++ b/app/views/jst/quickStartBar/QuickStartBarView.handlebars
@@ -4,8 +4,8 @@
   </div>
   <div class=span11>
     <ul class="nav nav-tabs">
-      {{#each quickStartItems}}
-        <li><a data-type="{{type}}" href="#"><i class="icon-{{icon}}"></i>{{title}}</a></li>
+      {{#each formViews}}
+        <li><a data-type="{{type}}" href="#"><i class="icon-{{type}}"></i>{{title}}</a></li>
       {{/each}}
     </ul>
   </div>
