--- a/app/views/jst/quickStartBar/announcement.handlebars
+++ b/app/views/jst/quickStartBar/announcement.handlebars
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row-fluid expandee">
-      <div class="span10">
+      <div class="span10 course_finder">
         <input
           name="course_ids"
           class="contextSearch span10"
