finish group dashboard quickStartBar
Change-Id: I286132d6e734ca7a0ae1acf41a5d88c664376b3f

--- a/app/views/jst/quickStartBar/message.handlebars
+++ b/app/views/jst/quickStartBar/message.handlebars
@@ -6,7 +6,7 @@
     </div>
 
     <div class="row-fluid expandee">
-      <div class="span10">
+      <div class="span10 recipient_finder">
         <input
           name="recipients"
           class="contextSearch span10"
