--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -26,7 +26,7 @@
     </div>
 
     <div class="row-fluid expandee">
-      <div class="span10">
+      <div class="course_finder span10">
         <input
           name="context_ids"
           class="contextSearch span10"
