new styles, meet old styles; old, meet new
Change-Id: Ic2aa57b1a9efcb6af98eea474d0d58301da88788

--- a/app/stylesheets/base/_#left-side.sass
+++ b/app/stylesheets/base/_#left-side.sass
@@ -1,20 +1,24 @@
+@import "blue/variables"
+
 #left-side
   float: left
   width: $left_side_width
-  background-color: $section_tabs_bg_color
+  border-bottom: solid 1px #ddd
+  //background-color: $section_tabs_bg_color
   display: none
-  font-size: 12px
+
+  //font-size: 12px
   
-  .left-side-inner
+  //.left-side-inner
     padding: 10px
     margin-left: 5px
     
-  #section-tabs-header
+  //#section-tabs-header
     padding: 12px
     margin: 0
     font-size: 20px
     line-height: 1
-  #section-tabs-header-subtitle
+  //#section-tabs-header-subtitle
     color: #777
     font-size: 11px
     font-style: italic
@@ -22,7 +26,7 @@
     display: block
     text-decoration: none
     
-#section-tabs
+//#section-tabs
   margin: 0
   padding: 0
   list-style: none
