--- a/app/stylesheets/g_base.sass
+++ b/app/stylesheets/g_base.sass
@@ -9,6 +9,8 @@
 @import base/#left-side.sass
 @import base/#right-side.sass
 
+@import blue/components.scss
+
 // ----------utility (or .class) based stylesheets.
 // @import utilities.sass
 // @import pagination.sass
