--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -1,4 +1,6 @@
 @import "token_input";
+@import "variables";
+@import "mixins";
 
 .toolbar {
   padding: $contentBoxPadding / 2;
@@ -66,11 +68,15 @@
 
 // List View
 .list-view {
-
-  background: $lightBackground;
+  background-color: $lightBackground;
   overflow: auto;
 
-  & > header {
+  // oldskool overrides
+  background-color: $lightBackground !important;
+
+  & > header,
+  // oldskool compat
+  #section-tabs-header {
     @include buttonBackground($listViewHeaderBackgroundLight, $listViewHeaderBackground);
     padding: 4px 12px;
     font-weight: bold;
@@ -79,13 +85,20 @@
     border-bottom: 1px solid $listBorderColor;
     @include bevelText;
     border-top: 1px solid $listBorderColor;
+
+    // oldskool overrides
+    font-size: $baseFontSize;
+    font-weight: normal;
+    margin-bottom: 0;
   }
 
   & > *:first-child {
-    border-top: 0;
+    border-top: 0 !important; // oldskool important
   }
 
-  & > ul {
+  & > ul,
+  // oldskool overrides
+  & > nav > ul {
     list-style: none;
     margin: 0;
     padding: 0;
