--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,18 +24,6 @@
 
 -%>
 <% content_for :head do %>
-  <% if @active_tab %>
-    <style>
-      #section-tabs .<%= @active_tab %> {
-        position: relative;
-        background-color: white;
-        margin-right: -1px;
-        z-index: 11;
-        padding: 7px 0 7px 23px;
-        font-size: 17px;
-      }
-    </style>
-  <% end %>
   <%= include_common_stylesheet %>
   <% if @eportfolio_view === true %>
     <%= stylesheet_link_tag "compiled/instructure_eportfolio.css" %>
@@ -131,55 +119,54 @@
 <%= render :partial => 'shared/flash_notices' %>
 
 
-
-<div id="wrapper-container">
-  <div id="wrapper">
-    <% if @show_left_side %>
-    <div id="left-side">
-      <% if left_side %>
-        <%= left_side %>
-      <% else %>
-        <% if @context.try(:short_name) %>
-          <h1 id="section-tabs-header"><%= @context.short_name %></h1>
-          <% if @context && @context.respond_to?(:context)  %>
-            <a href="<%= url_for(@context.context) %>" id="section-tabs-header-subtitle" class="ellipsis"><%= @context.context.name %></a>
-          <% elsif @context && @context.respond_to?(:enrollment_term) && !@context.enrollment_term.default_term? %>
-            <span id="section-tabs-header-subtitle" class="ellipsis"><%= @context.enrollment_term.name %></span>
-          <% end %>
+<div id="wrapper">
+  <% if @show_left_side %>
+  <div id="left-side" class="list-view">
+    <% if left_side %>
+      <%= left_side %>
+    <% else %>
+      <% if @context.try(:short_name) %>
+        <h1 id="section-tabs-header"><%= @context.short_name %></h1>
+        <% if @context && @context.respond_to?(:context)  %>
+          <a href="<%= url_for(@context.context) %>" id="section-tabs-header-subtitle" class="ellipsis"><%= @context.context.name %></a>
+        <% elsif @context && @context.respond_to?(:enrollment_term) && !@context.enrollment_term.default_term? %>
+          <span id="section-tabs-header-subtitle" class="ellipsis"><%= @context.enrollment_term.name %></span>
         <% end %>
-        <%= section_tabs %>
       <% end %>
-      <% if left_side_custom %>
-        <div class="left-side-inner">
-          <%= left_side_custom %>
-        </div>
-      <% end %>
-    </div>
+      <%= section_tabs %>
     <% end %>
-    <div id="main">
-      <div id="right-side-wrapper">
-        <aside id="right-side" role="complementary">
-          <%= right_side %>
-        </aside>
+    <% if left_side_custom %>
+      <div class="left-side-inner">
+        <%= left_side_custom %>
       </div>
-      <div id="not_right_side">
+    <% end %>
+  </div>
+  <% end %>
+  <div id="main">
+    <div id="right-side-wrapper">
+      <aside id="right-side" role="complementary">
+        <%= right_side %>
+      </aside>
+    </div>
+    <div id="not_right_side">
+      <div id="content-wrapper">
         <%= render_crumbs %>
         <div id="content" role="main">
           <%= yield %>
         </div>
       </div>
     </div>
-    <footer role="contentinfo" id="footer">
-      <a href="http://www.instructure.com"><%= image_tag 'footer-logo.png', :alt => t('instructure_description', "Instructure, makers of the open source learning management system Canvas") %></a>
-      <span id="footer-links">
-        <% if Setting.get_cached("show_opensource_linkback", "false") == "true" %>
-          <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
-        <% end %>
-        <%= help_link %>
-        <%= render :partial => 'shared/footer_links' %>
-      </span>
-    </footer>
   </div>
+  <footer role="contentinfo" id="footer">
+    <a href="http://www.instructure.com"><%= image_tag 'footer-logo.png', :alt => t('instructure_description', "Instructure, makers of the open source learning management system Canvas") %></a>
+    <span id="footer-links">
+      <% if Setting.get_cached("show_opensource_linkback", "false") == "true" %>
+        <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
+      <% end %>
+      <%= help_link %>
+      <%= render :partial => 'shared/footer_links' %>
+    </span>
+  </footer>
 </div>
 
 <% if wizard %>
