use button class on buttons
Change-Id: I5206c3a37c8e32882f23d72c84dbecb3a4a0c8ff

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -39,7 +39,7 @@
       </p>
       <% form_tag api_v1_group_url(@group), :method => 'PUT', :class => 'group_avatar_form' do %>
         <p><input type="file" name="avatar" class="avatar_file"></p>
-        <p><button type="submit">Change</button>
+        <p><button type="submit" class="button">Change</button>
         <%= link_to "Cancel", "#", :class => "cancel_avatar" %></p>
       <% end %>
     </div>
