dashboard using normal application layouts
Change-Id: Ic293557479748ed78bf0cdc9b05feb1402bc7840

--- a/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
+++ b/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
@@ -8,9 +8,11 @@
         <li><a href="#" data-value="all" class="active">All</a>
         <li><a href="#" data-value="announcements">Announcements</a>
         <li><a href="#" data-value="discussions">Discussions</a>
-        <li><a href="#" data-value="messages">Messages</a>
+        <li><a href="#" data-value="conversations">Conversations</a>
+        <li><a href="#" data-value="messages">Alerts</a>
       </ul>
     </div>
   </div>
 </header>
 <ul class="activityFeedItemsList"></ul>
+
