collection item styling changes
Change-Id: I016defc1036513d3698e1519a494428edf2ddd40

--- a/app/stylesheets/views/KollectionItems/ShowView.scss
+++ b/app/stylesheets/views/KollectionItems/ShowView.scss
@@ -21,6 +21,10 @@
     font-size: 15px;
     display: block;
   }
+  h1.user_comment {
+    font-size: 18px;
+    line-height: 1.27;
+  }
 
   .box-header .avatar {
     float: left;
