--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,55 +118,56 @@
 </div>
 <%= render :partial => 'shared/flash_notices' %>
 
-
-<div id="wrapper">
-  <% if @show_left_side %>
-  <div id="left-side" class="list-view">
-    <% if left_side %>
-      <%= left_side %>
-    <% else %>
-      <% if @context.try(:short_name) %>
-        <h1 id="section-tabs-header"><%= @context.short_name %></h1>
-        <% if @context && @context.respond_to?(:context)  %>
-          <a href="<%= url_for(@context.context) %>" id="section-tabs-header-subtitle" class="ellipsis"><%= @context.context.name %></a>
-        <% elsif @context && @context.respond_to?(:enrollment_term) && !@context.enrollment_term.default_term? %>
-          <span id="section-tabs-header-subtitle" class="ellipsis"><%= @context.enrollment_term.name %></span>
+<div id="wrapper-container">
+  <div id="wrapper">
+    <% if @show_left_side %>
+    <div id="left-side" class="list-view">
+      <% if left_side %>
+        <%= left_side %>
+      <% else %>
+        <% if @context.try(:short_name) %>
+          <h1 id="section-tabs-header"><%= @context.short_name %></h1>
+          <% if @context && @context.respond_to?(:context)  %>
+            <a href="<%= url_for(@context.context) %>" id="section-tabs-header-subtitle" class="ellipsis"><%= @context.context.name %></a>
+          <% elsif @context && @context.respond_to?(:enrollment_term) && !@context.enrollment_term.default_term? %>
+            <span id="section-tabs-header-subtitle" class="ellipsis"><%= @context.enrollment_term.name %></span>
+          <% end %>
         <% end %>
+        <%= section_tabs %>
       <% end %>
-      <%= section_tabs %>
-    <% end %>
-    <% if left_side_custom %>
-      <div class="left-side-inner">
-        <%= left_side_custom %>
-      </div>
-    <% end %>
-  </div>
-  <% end %>
-  <div id="main">
-    <div id="right-side-wrapper">
-      <aside id="right-side" role="complementary">
-        <%= right_side %>
-      </aside>
+      <% if left_side_custom %>
+        <div class="left-side-inner">
+          <%= left_side_custom %>
+        </div>
+      <% end %>
     </div>
-    <div id="not_right_side">
-      <div id="content-wrapper">
-        <%= render_crumbs %>
-        <div id="content" role="main">
-          <%= yield %>
+    <% end %>
+    <div id="main">
+      <div id="right-side-wrapper">
+        <aside id="right-side" role="complementary">
+          <%= right_side %>
+        </aside>
+      </div>
+      <div id="not_right_side">
+        <div id="content-wrapper">
+          <%= render_crumbs %>
+          <div id="content" role="main">
+            <%= yield %>
+          </div>
         </div>
       </div>
     </div>
+    <footer role="contentinfo" id="footer">
+      <a href="http://www.instructure.com"><%= image_tag 'footer-logo.png', :alt => t('instructure_description', "Instructure, makers of the open source learning management system Canvas") %></a>
+      <span id="footer-links">
+        <% if Setting.get_cached("show_opensource_linkback", "false") == "true" %>
+          <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
+        <% end %>
+        <%= help_link %>
+        <%= render :partial => 'shared/footer_links' %>
+      </span>
+    </footer>
   </div>
-  <footer role="contentinfo" id="footer">
-    <a href="http://www.instructure.com"><%= image_tag 'footer-logo.png', :alt => t('instructure_description', "Instructure, makers of the open source learning management system Canvas") %></a>
-    <span id="footer-links">
-      <% if Setting.get_cached("show_opensource_linkback", "false") == "true" %>
-        <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
-      <% end %>
-      <%= help_link %>
-      <%= render :partial => 'shared/footer_links' %>
-    </span>
-  </footer>
 </div>
 
 <% if wizard %>
