@body_classes << 'no-page-block' will let you do new style pages
Change-Id: I377270dc60341b577d6678ddf8f89c18f45775e0

--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -89,7 +89,15 @@ body
     #right-side, #right-side-wrapper
       bottom: 0
       
-    
+body.no-page-block
+  #main
+    width: 964px
+    +container-fixed
+  #content-wrapper
+    border-width: 0
+  #content
+    background-color: transparent
+    padding-top: 0
     
 #breadcrumbs
   border-bottom: 1px solid #ccc
