--- a/app/views/users/new_user_dashboard.html.erb
+++ b/app/views/users/new_user_dashboard.html.erb
@@ -1,6 +1,7 @@
 <%
   js_bundle :dashboard2
   jammit_css :dashboard, :tinymce, :collection_item_save
+  @body_classes << "no-page-block"
 %>
 
 <% content_for :right_side do %>
