right side links restyling
Change-Id: I241704756923b4a3744b794acc38d845a74e01c3

--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -14,11 +14,13 @@
     border-width: 1px 0 0
     margin: 17px 0 20px
   h2
-    font-size: 13px
+    font-size: 14px
+    line-height: 20px
     background: transparent
     color: $gray
     font-weight: bold
-    border-bottom: solid 1px
+    border-bottom: solid 1px $grayLight
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.85)
     margin: 0 20px 10px
     padding: 0
     +text-shadow(-1px, -1px, rgba(100, 100, 100, 0.4))
@@ -41,10 +43,12 @@
   margin: 10px 20px
   li
     a
+      font-size: 12px
       padding: 4px 0
       display: block
       color: $blue
       border-bottom: 1px solid $grayLighter
+      box-shadow: 0 1px 0 rgba(255, 255, 255, 0.85)
       // override fancy links grade checkmark
       background: transparent
 
