--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -21,7 +21,7 @@
     font-weight: bold
     border-bottom: solid 1px $grayLight
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.85)
-    margin: 0 20px 10px
+    margin: 40px 0 0 0
     padding: 0
     +text-shadow(-1px, -1px, rgba(100, 100, 100, 0.4))
     a
@@ -40,7 +40,7 @@
   margin-bottom: 20px
 .right-side-list
   +reset-list
-  margin: 10px 20px
+  margin: 10px 0
   li
     a
       font-size: 12px
