--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -74,6 +74,7 @@ body
     #right-side-wrapper
       display: block
       float: right
+      padding: 0px 20px 20px 20px
   &.with-scrolling-right-side, &.with-sidebar-pinned-to-bottom
     #content
       padding-right: $right_side_width + 29px
