--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -178,21 +178,16 @@
     </div>
   </div>
 
-  <h2 class="v-gutter">Stacked Tabs</h2>
   <div class="row">
     <div class="span4">
-      <ul class="nav nav-tabs nav-stacked">
-        <li><a href="#">Start a course</a>
-        <li><a href="#">Find people on Canvas</a>
-        <li><a href="#">Start a community</a>
+      <h2 class="v-gutter">Page Action List</h2>
+      <ul class="page-action-list">
+        <li><a href="#"><i class="icon-add"></i> <%= t 'new_course', 'Add a new course' %></a></li>
+        <li><a href="#"><i class="icon-search"></i> <%= t 'find_people', 'Find people on Canvas' %></a></li>
+        <li><a href="#"><i class="icon-group-new"></i> <%= t 'start_a_group', 'Start a group' %></a></li>
+        <li><a href="#"><i class="icon-collection"></i> <%= t 'create_collection', 'Create a collection' %></a></li>
       </ul>
     </div>
-  </div>
-
-  <h2 class="v-gutter"></h2>
-  <div class="row-fluid">
-    <div class="span4">span 2</div>
-    <div class="span8">span 8</div>
   </div>
 
   <h2 class="v-gutter">Icons</h2>
