tweaking styles some more
Change-Id: I742e4beb027f968636ef95c83f8a40e51b38d5ee

--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -89,7 +89,7 @@ body
   &.with-sidebar-pinned-to-bottom
     #right-side, #right-side-wrapper
       bottom: 0
-      
+
 body.no-page-block
   #main
     width: 964px
@@ -99,7 +99,9 @@ body.no-page-block
   #content
     background-color: transparent
     padding-top: 0
-    
+  #right-side
+    width: 180px
+
 #breadcrumbs
   border-bottom: 1px solid #ccc
   background-color: #F9F9F9
