--- a/app/views/jst/quickStartBar/QuickStartBarView.handlebars
+++ b/app/views/jst/quickStartBar/QuickStartBarView.handlebars
@@ -18,7 +18,9 @@
       <i class="item-type-image icon-large-"></i>
     </div>
 
-    <div class="newItemFormContainer image-block-content triangle-box"></div>
+    <div class="image-block-content">
+      <div class="newItemFormContainer triangle-box"></div>
+    </div>
   </div>
 </div>
 
