--- a/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
+++ b/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
@@ -1,9 +1,9 @@
 <header class="activityFeedItemsToolbar toolbar border border-trbl border-round-t">
   <div class="row-fluid">
-    <div class="span5">
-      <h2 class="header"><i class="icon-drawer-toggle">☭</i>Recent Activity</h2>
+    <div class="span4">
+      <h2 class="header"><i class="icon-toggle-left icon-drawer-toggle"></i>Recent Activity</h2>
     </div>
-    <div class="span7">
+    <div class="span8">
       <ul class="activityFeedItemsFilter nav nav-links">
         <li><a href="#" data-value="all" class="active">All</a>
         <li><a href="#" data-value="announcements">Announcements</a>
