make default canvas look like fft canvas
this changes the #identity styles and the header styles

also the course & assignments drop downs

and finally the default link color

Change-Id: I78471f2867b6e1a2f04518631c143c96751c72cc

--- a/app/stylesheets/_environment.sass
+++ b/app/stylesheets/_environment.sass
@@ -3,5 +3,7 @@
 @import mixins/misc.sass
 @import mixins/name_bubbles.sass
 
+@import 'blue/variables'
+@import 'blue/mixins'
 
 @import bootstrap/bootstrap/mixins
