--- a/app/stylesheets/_variables.sass
+++ b/app/stylesheets/_variables.sass
@@ -3,15 +3,14 @@ $left_side_width: 175px
 $min_main_width: 510px
 $main_background_color: #fff
 
-$link_color: #4b7092
+$link_color: #4B92E9
 
-$identity_link_color: #4c7092
-$identity_background_color: #e3e8e5
-$menu_border_color: #ccc
-$menu_text_color: #747575
-$menu_link_color: #456787
-$menu_background_color: #f3f4f5
-$menu_background_color-bottom: #e7e7e8
+$identity-link-color: #fff
+$menu-border-color: #ccc
+$menu-text-color: #747575
+$menu-link-color: #456787
+$menu-background-color: #f3f4f5
+
 $right_side_text_color: #595959
 $right_side_header_color: #fff
 
@@ -49,3 +48,6 @@ $diminutive-color: #acacac
 
 $silver-gradient-top: #ededed
 $silver-gradient-bottom: #c4c4c4
+
+
+$help-link-color: #ffa500
