--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -112,6 +112,7 @@
         right: 0
         top: 0
         z-index: 2
+        border-bottom: none
       &:hover
         a.disable_item_link
           +opacity(1.0)
