--- a/app/stylesheets/blue/application.scss
+++ b/app/stylesheets/blue/application.scss
@@ -8,8 +8,7 @@
 @import "icons";
 @import "borders";
 @import "gutters";
-@import "components";
+//@import "components";
 
 @import "base";
 @import "forms";
-
