drawer icon toggling
Change-Id: If692e0591419e6e5c578dbcc434934441a557140

--- a/app/stylesheets/activity_feed.scss
+++ b/app/stylesheets/activity_feed.scss
@@ -74,8 +74,9 @@
   margin-top: 13px;
 }
 
-.icon-drawer-toggle {
+.drawerToggle {
   cursor: pointer;
+  margin: 3px 5px 0px 5px;
 }
 
 .item-type-image {
