--- a/app/stylesheets/blue/_icons.scss
+++ b/app/stylesheets/blue/_icons.scss
@@ -2,7 +2,7 @@ i[class*=icon-], i[class^=icon-] {
   width: 16px;
   height: 16px;
   line-height: 16px;
-  background-image: url(../../../images/blue/icons.png);
+  background-image: url(../../../images/blue/canvas-icons-16x16-dkgrey.png);
   background-repeat: no-repeat;
 }
 
