--- a/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
+++ b/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
@@ -1,7 +1,7 @@
 <header class="activityFeedItemsToolbar toolbar border border-trbl border-round-t">
   <div class="row-fluid">
     <div class="span4">
-      <h2 class="header"><i class="icon-toggle-left icon-drawer-toggle"></i>Recent Activity</h2>
+      <h2 class="header"><i class="icon-toggle-left drawerToggle"></i> Recent Activity</h2>
     </div>
     <div class="span8">
       <ul class="activityFeedItemsFilter nav nav-links">
