--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -4,10 +4,6 @@
 %>
 <% content_for :page_title do %><%= join_title t(:group_settings_title, "%{group_name} Settings", :group_name => @group.name), @context.full_name %><% end %>
 
-<% content_for :right_side do %>
-  <a href="<%= context_url(@context, :context_url) %>" class="button button-sidebar delete_group_link"><%= image_tag "delete.png" %> <%= t 'buttons.delete_group', 'Delete this Group' %></a>
-<% end %>
-
 <div class="container v-gutter">
   <div class="row">
     <div class="span5">
@@ -39,41 +35,16 @@
       </p>
       <% form_tag api_v1_group_url(@group), :method => 'PUT', :class => 'group_avatar_form' do %>
         <p><input type="file" name="avatar" class="avatar_file"></p>
-        <p><button type="submit" class="button">Change</button>
+        <p><button type="submit" class="button small-button">Change</button>
         <%= link_to "Cancel", "#", :class => "cancel_avatar" %></p>
+      <% end %>
+
+      <% form_tag "/api/v1/groups/#{@group.id}/invite", :class => 'invite_form v-gutter' do %>
+        <label for=invite_email>Invite someone to canvas to join this group
+          <input type=text name=email type=email id=invite_email placeholder="E-Mail Address">
+        </label>
+        <button type=submit class="button small-button">Invite</button>
       <% end %>
     </div>
   </div>
 </div>
-
-<div id="delete_group_dialog" style="display: none;">
-  <%= t('confirm.delete', 'Are you sure you want to delete this group?') %>
-  <div class="button-container">
-    <%= link_to(t('buttons.delete', "Delete Group"), context_url(@context, :context_url), :method => :delete, :class => "button") %>
-    <button type="button" class="button button-secondary cancel_button"><%= t '#buttons.cancel', 'Cancel' %></button>
-  </div>
-</div>
-<% js_block do %>
-<script>
-require([
-  'jquery' /* $ */,
-  'jqueryui/dialog'
-], function($) {
-
-$(document).ready(function() {
-  $(".delete_group_link").click(function(event) {
-    event.preventDefault();
-    $("#delete_group_dialog").dialog('close').dialog({
-      autoOpen: false,
-      title: '<%= t 'title.confirm_delete', "Confirm Group Delete" %>',
-      modal: true
-    }).dialog('open');
-  });
-  $("#delete_group_dialog .cancel_button").click(function() {
-    $("#delete_group_dialog").dialog('close');
-  });
-});
-
-});
-</script>
-<% end %>
