coming up items on dashboard
Change-Id: I8e906231844829e29117e5240d5d5821c8f6e767

--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -227,6 +227,7 @@
   @include box-shadow(0 1px 1px 0px lighten($borderColor, 30%));
   @include gradient-directional(lighten($contentCalloutColor, 4%), $contentCalloutColor, 45deg);
 }
+
 .checkbox-inline {
   padding-top: 4px;
 }
@@ -243,6 +244,21 @@
       border-bottom: solid 1px lighten($grayLight, 10%);
       @include box-shadow(0 1px 0px rgba(255, 255, 255, 0.85));
       padding: 8px 0;
+
+      &:hover {
+        text-decoration: none;
+        color: $blue;
+        i {
+          background-image: url(../../../images/blue/canvas-icons-16x16-blue.png);
+        }
+      }
+
+      &:active {
+        color: $grayLight;
+        i {
+          background-image: url(../../../images/blue/canvas-icons-16x16-ltgrey.png);
+        }
+      }
     }
   }
 }
