--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -1,6 +1,7 @@
 @import 'centeredHeader'
 @import 'blue/variables'
 @import 'blue/mixins'
+@import mixins/misc.sass
 
 /* this is the size of the default span2 */
 $profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
