add birthday to bio page
using date_select because our js datepicker doesn't have a year dropdown

Change-Id: Ifd635ecb4b4359de1df8501a8dacbd5dd7fcc7d5

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -44,6 +44,13 @@
     </td>
   </tr>
   <tr>
+    <td><%= f.blabel :birthdate, :en => "Birthday" %></td>
+    <td>
+      <span class="display_data"><%= @user.birthdate.strftime('%m/%d/%Y') %></span>
+      <%= f.date_select :birthdate, {:order => [:day, :month, :year]}, :class => 'edit_data' %>
+    </td>
+  </tr>
+  <tr>
     <td><%= f.blabel :bio, :en => "Bio" %></td>
     <td>
       <span class="display_data"><%= format_message(@user.bio).first.html_safe %></span>
