--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -20,7 +20,7 @@
 <% end %>
 <h2 style="padding-top: 0.3em;"><%= t('headers.users_profile', "%{user}'s Profile", :user => @user.short_name) %></h2>
 <div class="clear"></div>
-<% form_for @user, :url => profile_url, :html => {:id => "update_profile_form", :style => "margin-bottom: 20px;"} do |f| %>
+<% form_for @user, :url => user_profile_url(@current_user), :html => {:id => "update_profile_form", :style => "margin-bottom: 20px;"} do |f| %>
 <table class="profile_table">
   <tr>
     <% editable_name = @user.user_can_edit_name? %>
@@ -237,7 +237,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; margin-top: 10px;">
-            <a class='button' href="<%= oauth_url(:service => "google_docs", :return_to => profile_url) %>"><%= t('buttons.authorize_google_docs', "Authorize Google Docs Access") %></a>
+            <a class='button' href="<%= oauth_url(:service => "google_docs", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.authorize_google_docs', "Authorize Google Docs Access") %></a>
           </div>
         </div>
       </li>
@@ -288,7 +288,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; font-size: 1.2em; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "facebook", :return_to => profile_url) %>"><%= t('buttons.register_facebook_account', "Register Your Facebook Account") %></a>
+            <a class="button" href="<%= oauth_url(:service => "facebook", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.register_facebook_account', "Register Your Facebook Account") %></a>
           </div>
         </div>
       </li>
@@ -310,7 +310,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; font-size: 1.2em; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "linked_in", :return_to => profile_url) %>"><%= t('buttons.register_linkedin_account', "Register Your LinkedIn Account") %></a>
+            <a class="button" href="<%= oauth_url(:service => "linked_in", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.register_linkedin_account', "Register Your LinkedIn Account") %></a>
           </div>
         </div>
       </li>
@@ -334,7 +334,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "twitter", :return_to => profile_url) %>"><%= t('buttons.authorize_twitter', "Authorize Twitter Access") %></a>
+            <a class="button" href="<%= oauth_url(:service => "twitter", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.authorize_twitter', "Authorize Twitter Access") %></a>
           </div>
         </div>
       </li>
