--- a/app/views/shared/_identity.html.erb
+++ b/app/views/shared/_identity.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to t('links.log_in', "Log In"), login_path %></li>
     <% end %>
   <% else %>
-    <li class="user_name"><%= link_to @current_user.short_name, profile_path %></li>
+    <li class="user_name"><%= link_to @current_user.short_name, user_profile_path(@current_user) %></li>
     <% if @real_current_user && @real_current_user != @current_user %>
       <% if @current_user.fake_student? %>
         <% student_view_course = @current_user.all_courses.first %>
@@ -22,7 +22,7 @@
         <b class="unread-messages-count"><%= unread %></b>
       <% end %>
       </a></li>
-    <li><%= link_to t('links.profile', "Profile"), profile_path %></li>
+    <li><%= link_to t('links.profile', "Profile"), user_profile_path(@current_user) %></li>
     <% end %>
     <li class="user_id" style="display: none;"><%= @current_user.id %></li>
     <li class="course_id" style="display: none;"><%= @context.id if @context && @context.is_a?(Course) %></li>
