start a group link functionality
Change-Id: I1674244f060b317e968eb54be99f7b4e0131610d

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -8,6 +8,8 @@
   <div class="row">
     <div class="span5">
       <% form_for :group, :url => context_url(@context, :context_url), :html => {:method => :put} do |f| %>
+        <%= hidden_field_tag :return_to, params[:return_to] %>
+
         <%= f.blabel :name, :en => "Title" %>
         <%= f.text_field :name %>
 
