--- a/app/stylesheets/quick_start_bar.scss
+++ b/app/stylesheets/quick_start_bar.scss
@@ -5,6 +5,13 @@
 $boxSizingBaseLineHeight: $baseLineHeight + 8;
 
 .quickStartBar {
+  margin-top: -1em; // this resets the padding on #content
+  font-size: 14px;
+  min-height: 118px;
+  color: inherit;
+  /* hide box-shadow */
+  overflow: hidden;
+
   textarea {
     @include box-sizing(border-box);
   }
@@ -12,79 +19,70 @@ $boxSizingBaseLineHeight: $baseLineHeight + 8;
     @include box-sizing(border-box);
     height: $boxSizingBaseLineHeight;
   }
+  .pick-an-item {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background: #fff;
+    font-weight: bold;
+  }
+
+
+  /* kill bootstrap stuff */
+  .nav {
+    margin: 0;
+    margin-left: 20px;
+    border: none;
+
+    /* kill bootstrap stuff */
+    > li > a {
+      line-height: 22px;
+      font-size: 12px;
+      color: #8d8d8d;
+      border: none;
+
+      /* kill bootstrap stuff */
+      &:hover,
+      &.active {
+        border: none;
+        background: inherit;
+        color: $black;
+      }
+    }
+  }
+
+  .new-text {
+    font-size: 16px;
+    display: block;
+    padding: 9px 4px 4px 22px;
+    color: #000;
+  }
+
+  /* override default datetime_suggest styles */
+  .datetime_suggest {
+    display: inline;
+    margin-left: 10px;
+    font-weight: normal;
+    color: $blueGray;
+  }
+
+  [class*=icon-], [class^=icon-] {
+    margin-right: 5px;
+  }
+
+  &.not-expanded input, &.not-expanded textarea {
+    // too much space under when not expanded
+    margin-bottom: 0;
+  }
+
+  .contextSearch {
+    width: 100%;
+  }
+
 }
 
 // kill bootstrap styles
 .newItemForm {
   margin-bottom: 0;
-}
-
-.quickStartBar {
-  font-size: 14px;
-  min-height: 118px;
-  color: inherit;
-  /* hide box-shadow */
-  overflow: hidden;
-}
-
-.quickStartBar .pick-an-item {
-  padding-top: 4px;
-  padding-bottom: 4px;
-  background: #fff;
-  font-weight: bold;
-}
-
-/* kill bootstrap stuff */
-.quickStartBar .nav {
-  margin: 0;
-  margin-left: 20px;
-  border: none;
-}
-
-/* kill bootstrap stuff */
-.quickStartBar .nav > li > a {
-  line-height: 22px;
-  font-size: 12px;
-  color: #8d8d8d;
-  border: none; 
-}
-
-/* kill bootstrap stuff */
-.quickStartBar .nav > li > a:hover,
-.quickStartBar .nav > li > a.active {
-  border: none;
-  background: inherit;
-  color: $black;
-}
-
-.quickStartBar .new-text {
-  font-size: 16px;
-  display: block;
-  padding: 9px 4px 4px 22px;
-  color: #000;
-}
-
-/* override default datetime_suggest styles */
-.quickStartBar .datetime_suggest {
-  display: inline;
-  margin-left: 10px;
-  font-weight: normal;
-  color: $blueGray;
-}
-
-.quickStartBar [class*=icon-], .quickStartBar [class^=icon-] {
-  margin-right: 5px;
-}
-
-.quickStartBar {
-  &.not-expanded input, &.not-expanded textarea {
-    // too much space under when not expanded
-    margin-bottom: 0;
-  }
-}
-
-.quickStartBar .contextSearch {
-  width: 100%;
 }
 
 .not-expanded .expander textarea {
@@ -94,8 +92,7 @@ $boxSizingBaseLineHeight: $baseLineHeight + 8;
 
 .expandee {
   display: none;
-}
-
-.expanded .expandee {
-  display: block;
+  .expanded & {
+    display: block;
+  }
 }
