there are no "new styles", take 1
Change-Id: I975b55814c344e5953d7346fb7bfcc396ff832f5

--- a/app/stylesheets/_variables.sass
+++ b/app/stylesheets/_variables.sass
@@ -1,6 +1,7 @@
 $right_side_width: 300px
 $left_side_width: 175px
 $min_main_width: 510px
+$max_main_width: 1100px
 $main_background_color: #fff
 
 $link_color: #4B92E9
